adding _header.ejs inside here

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -7,6 +7,9 @@
 </head>
 
 <body>
+  <!-- it's from _header.ejs-->
+  <%- include('partials/_header') %>
+  <!-- it's from _header.ejs-->
   <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
