adding delete botton

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -8,20 +8,24 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <title>TinyApp</title>
 </head>
-
-
-
 <body>
   <!-- it's from _header.ejs-->
   <%- include('partials/_header') %>
   <!-- it's from _header.ejs-->
   <main style="margin: 1em;">
     <h3>My URLs</h3>
+
+    <form method="POST" action="/urls/9sm5xK/delete">
+      
+    </form>
+
     <table class="table">
+      
       <thead>
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th scope="col">Delete</th>
         </tr>
       </thead>
       <tbody>
@@ -29,6 +33,7 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
+            <td><button type="button">Delete</button></td>
           </tr>
         <% } %>
       </tbody>
