--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -15,10 +15,8 @@
   <main style="margin: 1em;">
     <h3>My URLs</h3>
 
-    <form method="POST" action="/urls/9sm5xK/delete">
-      
-    </form>
-
+    
+    
     <table class="table">
       
       <thead>
@@ -33,7 +31,7 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
-            <td><button type="button">Delete</button></td>
+            <td><form method="POST" action="/urls/<%= url %>/delete"><button type="submit">Delete</button></form></td>
           </tr>
         <% } %>
       </tbody>
