--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -14,8 +14,6 @@
   <!-- it's from _header.ejs-->
   <main style="margin: 1em;">
     <h3>My URLs</h3>
-
-    
     
     <table class="table">
       
@@ -24,6 +22,7 @@
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
           <th scope="col">Delete</th>
+          <th scope="col">Edit</th>
         </tr>
       </thead>
       <tbody>
@@ -31,7 +30,10 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
+            
             <td><form method="POST" action="/urls/<%= url %>/delete"><button type="submit">Delete</button></form></td>
+            <td><p><a href = "/urls/<%= url %>">Edit</a></p>
+            </td>
           </tr>
         <% } %>
       </tbody>
