--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,6 +8,9 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        <form method="POST" action="/login">
+          <p>Sign In: <input type="text" name="username"/><button type="submit">Submit!</button></p>
+        </form>
       </div>
     </div>
   </nav>
