--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,16 +8,17 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-        
+
         <% if(username) { %>
           <%= `Logged in as ${username}` %>
-         
+          <form method="POST" action="/logout"> 
+            <p><button type="submit">LogOut!</button></p> 
+            </form>
 
         <% } else { %>
           <form method="POST" action="/login"> 
             <p>Sign In: <input type="text" name="username"/><button type="submit">Submit!</button></p> 
             </form>
-          
             <% } %>
             
       </div>
