--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -18,8 +18,9 @@
       <h3>Login</h3>
       <!--form tag has 2 attributes : 1.action: tells form which URL to submit, 2.method: tells form which HTTP method to use when submitting the form-->
       <form method="POST" action="/login"> 
-        <p><input type="email" name="email" placeholder="Enter your email"/>email</p>
-        <p><input type="password" name="password" placeholder="Enter your password"/>password<button type="submit">login</button></p>
+        <p><input type="email" name="email" placeholder="Enter your email"/><b> Email</b></p>
+        <p><input type="password" name="password" placeholder="Enter your password"/><b> Password </b></p>
+        <p><button type="submit">login</button></p>
       </form>
     </main>
       <!-- Bootstrap JS (we need to do it on every page-->
